chore: release version 1.9.1